# esp32c3

./: Cargo.toml  snake.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: build.sh  flash.sh  run-wokwi.sh
src/: lib.rs  main.rs
src/model/: game.rs  snake.rs
