[package]
name = "esp32c3"
version = "0.1.0"
authors = ["yyue <yy@yyue.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = {version = "0.2"}
# esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.3.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.10" }
riscv = { version = "0.10" }
esp-println = { version = "0.3.1", features = ["esp32c3", "log"] }
embedded-graphics = "0.7"
ssd1306 = "0.7"

no-std-compat = "0.4.1"
lcd1602-rs = "0.1.0"

embedded-hal="0.2"
void={version = "1.0.2", default-features = false}

# esp-wifi={ git = "https://github.com/esp-rs/esp-wifi", features = ["esp32c3", "wifi", "ble", "embedded-svc"] }
esp-wifi={ path = "../esp-wifi", features = ["esp32c3", "wifi", "ble", "embedded-svc"] }
log = "0.4.17"
smoltcp = { version = "0.8", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.22", default-features = false, features = [] }
heapless = { version = "0.7", default-features = false }
# bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps" }
# embedded-io = "0.3"
# esp32-hal = { version = "0.5.0", optional = true, features = [ "rt" ] }
# enumset = { version = "1", default-features = false, optional = true }

# embedded-hal-async = { version = "0.1.0-alpha.3", optional = true } 
# embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }

# [features]
# default = [ "utils" ]
# esp32c3 = [ "riscv-target", "riscv", "riscv-rt", "esp32c3-hal" ]
# wifi_logs = []
# dump_packets = []
# utils = []
# enumset = []
# embedded-svc = [ "dep:enumset", "dep:embedded-svc", "utils" ]
# wifi = []
# ble = [ "esp32-hal?/bluetooth" ]

# [dev-dependencies]
# bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps" }
# bleps-macros = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros" }

# [build-dependencies]
# riscv-target = { version = "0.1.2", optional = true }


# currently published versions don't contain all relevant adjustments - using git dependencies for now
[patch.crates-io]
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal/", package = "esp32c3-hal"}
